--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Strona Gry</title>
   <link rel="stylesheet" href="styles.css" />
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
+
 </head>
 <body>
 
@@ -46,7 +48,7 @@
         <a href="javascript:void(0);" id="login-link">Zaloguj się</a>
         <div id="login-form-section" class="form-inline" style="display:none;">
           <form id="login-form">
-            <input type="text" id="login-username" placeholder="Nazwa użytkownika" required />
+            <input type="email" id="login-email" placeholder="Email" required />
             <input type="password" id="login-password" placeholder="Hasło" required />
             <button type="submit">Zaloguj się</button>
             <button type="button" id="cancel-login">Anuluj</button>
@@ -113,7 +115,6 @@
     </div>
   </footer>
 
-  <!-- Twój skrypt -->
   <script src="script.js"></script>
 </body>
 </html>
