--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="javascript:void(0);" id="login-link">Zaloguj się</a>
         <div id="login-form-section" class="form-inline" style="display:none;">
           <form id="login-form">
-            <input type="email" id="login-email" placeholder="Email" required />
+            <input type="email" id="login-username" placeholder="Email" required />
             <input type="password" id="login-password" placeholder="Hasło" required />
             <button type="submit">Zaloguj się</button>
             <button type="button" id="cancel-login">Anuluj</button>
