--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Strona Gry</title>
   <link rel="stylesheet" href="styles.css" />
+  <!-- Firebase SDK -->
+  <script type="module">
+    // Globalnie dostępny Firebase config - do użytku w script.js
+    window.firebaseConfig = {
+      apiKey: "AIzaSyAvZ2ZdDjDLisZbMOqHCbcDNK5rMsXCgy8",
+      authDomain: "strona-ed4f6.firebaseapp.com",
+      projectId: "strona-ed4f6",
+      storageBucket: "strona-ed4f6.appspot.com",
+      messagingSenderId: "101656150028",
+      appId: "1:101656150028:web:5830ca8a36c5b5250e6e29",
+      measurementId: "G-EWYZQPTM5Y"
+    };
+  </script>
 </head>
 <body>
 
@@ -109,6 +122,7 @@
     </div>
   </footer>
 
+  <!-- Firebase App + Auth + Firestore z CDN w module (zamiast skryptu inline, wszystko w script.js) -->
   <script type="module" src="script.js"></script>
 </body>
 </html>
