--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="javascript:void(0);" id="login-link">Zaloguj się</a>
         <div id="login-form-section" class="form-inline" style="display:none;">
           <form id="login-form">
-            <input type="email" id="login-email" placeholder="Email" required />
+            <input type="text" id="login-username" placeholder="Nazwa użytkownika" required />
             <input type="password" id="login-password" placeholder="Hasło" required />
             <button type="submit">Zaloguj się</button>
             <button type="button" id="cancel-login">Anuluj</button>
@@ -109,10 +109,6 @@
     </div>
   </footer>
 
-  <!-- Firebase i skrypt -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
